# ArithmaticExpression

./: CMakeLists.txt  README.md
src/main/: CMakeLists.txt  Main.cpp
src/main/database/: Token.h  TokenDatabase.cpp  TokenDatabase.h
src/main/engine/: CoreEngine.h  ShuntingYard.cpp  ShuntingYard.h
src/main/helper/: Parser.cpp  Parser.h  Utils.cpp  Utils.h
src/main/tree/: BinaryTree.cpp  BinaryTree.h  Tree.h
src/test/: CMakeLists.txt  MainTest.cpp
src/test/database/: TokenDatabaseTest.cpp  TokenDatabaseTest.h
src/test/engine/: ShuntingYardTest.cpp  ShuntingYardTest.h
src/test/helper/: ParserTest.cpp  ParserTest.h  UtilsTest.cpp
src/test/tree/: BinaryTreeTest.cpp  BinaryTreeTest.h
